plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.spongepowered.mixin' version '0.7.+'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
    mappings channel: mapping_channel, version: mapping_version

    copyIdeResources = true

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', mod_id

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', mod_id

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        gameTestServer {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', mod_id

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
    }
}

// ForgeGradle 的 JarJar 默认是关闭的；如果不显式启用，任务会被 onlyIf 直接跳过。
jarJar.enable()

mixin {
    add sourceSets.main, 'nebl.refmap.json'
    config 'nebl.mixins.json'
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenLocal()
    maven {
        name = 'SpongePowered'
        url = 'https://repo.spongepowered.org/repository/maven-public/'
    }
    maven {
        name = 'zstd-jni'
        url = 'https://repo1.maven.org/maven2/'
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    annotationProcessor fileTree("${gradle.gradleUserHomeDir}/caches/modules-2/files-2.1/org.spongepowered/mixin") {
        include '**/mixin-0.8.5-processor.jar'
    }

    // 运行时必须随 mod 一起打包的依赖，改用 ForgeGradle 自带的 jarJar，
    // 避免手工 fat-jar 破坏 Forge 模组元数据结构。
    implementation fg.deobf('com.github.luben:zstd-jni:1.5.5-5')
    jarJar('com.github.luben:zstd-jni:[1.5.5-5,1.5.6)')

    // MixinExtras
    implementation(annotationProcessor('io.github.llamalad7:mixinextras-forge:0.3.5'))
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

def jarManifestAttributes = [
        'Specification-Title'     : mod_id,
        'Specification-Vendor'    : mod_authors,
        'Specification-Version'   : '1',
        'Implementation-Title'    : project.name,
        'Implementation-Version'  : project.jar.archiveVersion,
        'Implementation-Vendor'   : mod_authors,
        'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
        'MixinConfigs'            : 'nebl.mixins.json'
]

tasks.withType(Jar).configureEach {
    manifest {
        attributes(jarManifestAttributes)
    }
}

tasks.named('jar', Jar).configure {
    archiveClassifier = 'slim'
    finalizedBy 'reobfJar'
}

tasks.named('jarJar', Jar).configure {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    archiveClassifier = ''
    finalizedBy 'reobfJarJar'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact tasks.named('jarJar')
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
